@@ -1,5 +1,15 @@
 2016-03-01  Saam barati  <sbarati@apple.com>
 
+        Remove FIXMEs and add valid test cases after necessary patch has landed.
+
+        Rubber stamped by Mark Lam.
+
+        * tests/stress/proxy-prevent-extensions.js:
+        (assert.Object.isSealed):
+        (assert):
+
+2016-03-01  Saam barati  <sbarati@apple.com>
+
         [ES6] Implement Proxy.[[IsExtensible]]
         https://bugs.webkit.org/show_bug.cgi?id=154872
 
